CHATS_SIT/force-app/main/default/objects/T_COPAY_DELINQC__c.object
<CustomObject>
    <description>Information about households who have been reported as delinquent in paying their parent fee to the provider</description>
   <!--  <enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>AMT_DELINQC_COPAY_ENRLMT__c</fullName>
        <description>Parent Fee Delinquency Amount</description>
        <label>Parent Fee Delinquency Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDE_REASON_RESOLN__c</fullName>
        <label>Resolution Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00837</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_MONTH_DELINQC__c</fullName>
        <description>Delinquency Month</description>
        <label>Delinquency Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00614</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_RESOLN_DELINQC__c</fullName>
        <description>Delinquency Resolution Date</description>
        <label>Delinquency Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_RPTD_DELINQC__c</fullName>
        <description>Delinquency Reported Date</description>
        <label>Delinquency Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_YEAR_DELINQC__c</fullName>
        <description>Delinquency Year</description>
        <label>Delinquency Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case ID</description>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Parent Fee Delinquency</relationshipLabel>
        <relationshipName>T_COPAY_DELINQC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Parent/Caretaker</description>
        <label>Primary Parent/Caretaker</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Parent Fee Delinquency</relationshipLabel>
        <relationshipName>T_COPAY_DELINQC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_COPAY_AUTH__c</fullName>
        <label>Authorization Parent Fee ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_auth_copay__x</referenceTo>
        <relationshipLabel>Parent Fee Delinquencies</relationshipLabel>
        <relationshipName>Parent_Fee_Delinquencies</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_fee_Reverse_Refer_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent fee Reverse Refer Track</label>
        <description>Whenever a new parent fee Delinquency record got created or resolution date updated need to send flag for that case to CBMS.</description>
        <type>Checkbox</type>
    </fields>
    <label>Parent Fee Delinquency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>DTE_MONTH_DELINQC__c</columns>
        <columns>DTE_RPTD_DELINQC__c</columns>
        <columns>DTE_YEAR_DELINQC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Parent Fee Delinquency ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parent Fee Delinquencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Delinqc_Rprtd_Date</fullName>
        <active>true</active>
        <description>Delinqency Reported Date must be greater than</description>
        <errorConditionFormula>AND( NOT(ISBLANK(TEXT(DTE_MONTH_DELINQC__c))),
       NOT(ISBLANK(  DTE_YEAR_DELINQC__c  )),
       DTE_RPTD_DELINQC__c &lt; DATE(VALUE(DTE_YEAR_DELINQC__c),
                         VALUE( TEXT( DTE_MONTH_DELINQC__c )),
                         1)
 )</errorConditionFormula>
        <errorDisplayField>DTE_RPTD_DELINQC__c</errorDisplayField>
        <errorMessage>Delinquency Reported Date must be greater than Month &amp; Year of Delinquency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_Fee_Delinqc_Amt_LT_Zero</fullName>
        <active>true</active>
        <description>Parent Fee Delinquency Amount cannot be less than Zero</description>
        <errorConditionFormula>AND( NOT( ISBLANK(AMT_DELINQC_COPAY_ENRLMT__c) ),
     AMT_DELINQC_COPAY_ENRLMT__c &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>AMT_DELINQC_COPAY_ENRLMT__c</errorDisplayField>
        <errorMessage>Parent Fee Delinquency Amount cannot be less than Zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_RsltionDate_if_RsltionRsn_NtBlnc</fullName>
        <active>true</active>
        <description>Require Delinquency Resolution Date if Resolution Reason is entered.</description>
        <errorConditionFormula>AND( NOT( ISBLANK( TEXT(CDE_REASON_RESOLN__c)) ), 
ISBLANK( DTE_RESOLN_DELINQC__c ))</errorConditionFormula>
        <errorDisplayField>DTE_RESOLN_DELINQC__c</errorDisplayField>
        <errorMessage>Require Delinquency Resolution Date if Resolution Reason is entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_RsltionRsn_if_RsltionDate_NtBlnc</fullName>
        <active>true</active>
        <description>Require Resolution Reason if Delinquency Resolution Date is not blank</description>
        <errorConditionFormula>AND( NOT( ISBLANK(DTE_RESOLN_DELINQC__c) ),
    ISBLANK( TEXT(CDE_REASON_RESOLN__c) )  
)</errorConditionFormula>
        <errorDisplayField>CDE_REASON_RESOLN__c</errorDisplayField>
        <errorMessage>Require Resolution Reason if Delinquency Resolution Date is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RsltionDate_Cannot_Be_FutureDate</fullName>
        <active>true</active>
        <description>Delinquency Resolution date cannot be in future</description>
        <errorConditionFormula>DTE_RESOLN_DELINQC__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>DTE_RESOLN_DELINQC__c</errorDisplayField>
        <errorMessage>Delinquency Resolution Date cannot be a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RsltionDate_MustBe_Grtrthan_ReprtdDate</fullName>
        <active>true</active>
        <description>Delinquency Resolution Date must be greater than Delinquency Reported Date.</description>
        <errorConditionFormula>DTE_RESOLN_DELINQC__c &lt;= DTE_RPTD_DELINQC__c</errorConditionFormula>
        <errorDisplayField>DTE_RESOLN_DELINQC__c</errorDisplayField>
        <errorMessage>Delinquency Resolution Date must be greater than Delinquency Reported Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_Fee_Delinqc_Amt_Zero</fullName>
        <active>true</active>
        <description>Parent Fee Delinquency amount must be more than 0.00</description>
        <errorConditionFormula>OR(
 ISBLANK(AMT_DELINQC_COPAY_ENRLMT__c),
 AMT_DELINQC_COPAY_ENRLMT__c = 0.0
)</errorConditionFormula>
        <errorDisplayField>AMT_DELINQC_COPAY_ENRLMT__c</errorDisplayField>
        <errorMessage>Parent Fee Delinquency amount must be more than 0.00</errorMessage>
    </validationRules>
</CustomObject>