CHATS_SIT/force-app/main/default/objects/T_COPAY_DELINQC__c/validationRules/Parent_Fee_Delinqc_Amt_LT_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Fee_Delinqc_Amt_LT_Zero</fullName>
    <active>true</active>
    <description>Parent Fee Delinquency Amount cannot be less than Zero</description>
    <errorConditionFormula>AND( NOT( ISBLANK(AMT_DELINQC_COPAY_ENRLMT__c) ),
     AMT_DELINQC_COPAY_ENRLMT__c &lt; 0.0
)</errorConditionFormula>
    <errorDisplayField>AMT_DELINQC_COPAY_ENRLMT__c</errorDisplayField>
    <errorMessage>Parent Fee Delinquency Amount cannot be less than Zero</errorMessage>
</ValidationRule>