CHATS_SIT/force-app/main/default/objects/T_COPAY_DELINQC__c/validationRules/Parent_Fee_Delinqc_Amt_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Fee_Delinqc_Amt_Zero</fullName>
    <active>true</active>
    <description>Parent Fee Delinquency amount must be more than 0.00</description>
    <errorConditionFormula>OR(
 ISBLANK(AMT_DELINQC_COPAY_ENRLMT__c),
 AMT_DELINQC_COPAY_ENRLMT__c = 0.0
)</errorConditionFormula>
    <errorDisplayField>AMT_DELINQC_COPAY_ENRLMT__c</errorDisplayField>
    <errorMessage>Parent Fee Delinquency amount must be more than 0.00</errorMessage>
</ValidationRule>