CHATS_SIT/force-app/main/default/objects/T_COPAY_DELINQC__c/validationRules/Require_RsltionDate_if_RsltionRsn_NtBlnc.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_RsltionDate_if_RsltionRsn_NtBlnc</fullName>
    <active>true</active>
    <description>Require Delinquency Resolution Date if Resolution Reason is entered.</description>
    <errorConditionFormula>AND( NOT( ISBLANK( TEXT(CDE_REASON_RESOLN__c)) ), 
ISBLANK( DTE_RESOLN_DELINQC__c ))</errorConditionFormula>
    <errorDisplayField>DTE_RESOLN_DELINQC__c</errorDisplayField>
    <errorMessage>Require Delinquency Resolution Date if Resolution Reason is entered.</errorMessage>
</ValidationRule>