CHATS_SIT/force-app/main/default/objects/T_COPAY_DELINQC__c/validationRules/Require_RsltionRsn_if_RsltionDate_NtBlnc.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_RsltionRsn_if_RsltionDate_NtBlnc</fullName>
    <active>true</active>
    <description>Require Resolution Reason if Delinquency Resolution Date is not blank</description>
    <errorConditionFormula>AND( NOT( ISBLANK(DTE_RESOLN_DELINQC__c) ),
    ISBLANK( TEXT(CDE_REASON_RESOLN__c) )  
)</errorConditionFormula>
    <errorDisplayField>CDE_REASON_RESOLN__c</errorDisplayField>
    <errorMessage>Require Resolution Reason if Delinquency Resolution Date is not blank</errorMessage>
</ValidationRule>