CHATS_SIT/force-app/main/default/objects/T_COPAY_DELINQC__c/validationRules/RsltionDate_Cannot_Be_FutureDate.validationRule-meta.xml
<ValidationRule>
    <fullName>RsltionDate_Cannot_Be_FutureDate</fullName>
    <active>true</active>
    <description>Delinquency Resolution date cannot be in future</description>
    <errorConditionFormula>DTE_RESOLN_DELINQC__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>DTE_RESOLN_DELINQC__c</errorDisplayField>
    <errorMessage>Delinquency Resolution Date cannot be a future date</errorMessage>
</ValidationRule>