CHATS_SIT/force-app/main/default/objects/T_COPAY_DELINQC__c/validationRules/RsltionDate_MustBe_Grtrthan_ReprtdDate.validationRule-meta.xml
<ValidationRule>
    <fullName>RsltionDate_MustBe_Grtrthan_ReprtdDate</fullName>
    <active>true</active>
    <description>Delinquency Resolution Date must be greater than Delinquency Reported Date.</description>
    <errorConditionFormula>DTE_RESOLN_DELINQC__c &lt;= DTE_RPTD_DELINQC__c</errorConditionFormula>
    <errorDisplayField>DTE_RESOLN_DELINQC__c</errorDisplayField>
    <errorMessage>Delinquency Resolution Date must be greater than Delinquency Reported Date.</errorMessage>
</ValidationRule>