CHATS_SIT/force-app/main/default/objects/T_COPAY_DELINQC__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>DTE_MONTH_DELINQC__c</columns>
    <columns>DTE_RPTD_DELINQC__c</columns>
    <columns>DTE_YEAR_DELINQC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>